--- a/package.json
+++ b/package.json
@@ -9,14 +9,11 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "got": "^6.7.1",
-    "request": "^2.87.0"
-  },
-  "devDependencies": {
+    "request": "^2.87.0",
     "twilio-run": "^2.6.0"
   },
-  "engines": {
-    "node": "10"
-  }
+  "devDependencies": {}
 }
