--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.3",
     "got": "^6.7.1",
     "request": "^2.87.0",
+    "twilio": "^3.54.1",
     "twilio-run": "^2.6.0"
   },
   "devDependencies": {}
