--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "deploy": "twilio-run deploy"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.18.3",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
